<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".ForgotActivity">

  <TextView
      android:id="@+id/tvForgotpasswordView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="150dp"
      android:gravity="center"
      android:text="@string/password_reset_page"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/txtForgotpasswordReset"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="150dp"
      android:ems="10"
      android:gravity="center_vertical"
      android:hint="@string/new_password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvForgotpasswordView" />

  <EditText
      android:id="@+id/txtForgotConfirmPasswordReset"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:ems="10"
      android:gravity="center_vertical"
      android:hint="@string/confirm_password"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="@+id/txtForgotpasswordReset"
      app:layout_constraintStart_toStartOf="@+id/txtForgotpasswordReset"
      app:layout_constraintTop_toBottomOf="@+id/txtForgotpasswordReset"
      android:importantForAutofill="no" />

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="53dp"
      android:gravity="center"
      android:onClick="buReset"
      android:text="@string/reset"
      android:textAllCaps="false"
      app:layout_constraintEnd_toEndOf="@+id/txtForgotConfirmPasswordReset"
      app:layout_constraintStart_toStartOf="@+id/txtForgotConfirmPasswordReset"
      app:layout_constraintTop_toBottomOf="@+id/txtForgotConfirmPasswordReset" />

</androidx.constraintlayout.widget.ConstraintLayout>