<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/login_view"
        android:textColor="#bd903d"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints">


        <EditText
            android:id="@+id/txtLoginEmail"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="5pt"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#e6ca67"
            android:textColorHint="#E6CA67"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="362dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#e6ca67"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtLoginPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="5pt"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#e6ca67"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="308dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:onClick="buLoginEvent"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/custom_button"
        android:onClick="buCreate"
        android:text="@string/login_create"
        app:layout_constraintBottom_toBottomOf="@+id/tvhaveaccount"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/tvhaveaccount"
        app:layout_constraintTop_toTopOf="@+id/tvhaveaccount" />

    <TextView
        android:id="@+id/tvhaveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:textColor="#bd903d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="buResetPassword"
        android:text="@string/don_t_remember_password"
        android:textColor="#bd903d"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:srcCompat="@drawable/or_line"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>