<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/register"
        android:textColor="#bd903d"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView1"
        app:layout_constraintStart_toStartOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/imageView1">

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="5pt"
            android:ems="10"
            android:hint="@string/enter_first_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#e6ca67"
            android:textColorHint="#E6CA67"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="130dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="5pt"
            android:ems="10"
            android:hint="@string/enter_last_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#e6ca67"
            android:textColorHint="#E6CA67"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="192dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="5pt"
            android:ems="10"
            android:hint="@string/enter_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#e6ca67"
            android:textColorHint="#E6CA67"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="254dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#e6ca67"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

        <EditText
            android:id="@+id/txtPssword"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="5pt"
            android:ems="10"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#e6ca67"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="316dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="password_toggle"
        app:endIconTint="#e6ca67"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="300dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="5pt"
            android:ems="10"
            android:hint="@string/enter_confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="#e6ca67"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="378dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:onClick="buSignup"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout8"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="@+id/btnSignup"
        app:layout_constraintStart_toStartOf="@+id/btnSignup"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup"
        app:srcCompat="@drawable/or_line" />

    <TextView
        android:id="@+id/tvRememberpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/alreay_have_accont"
        android:textColor="#bd903d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSignupPageLogin"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.454" />

    <Button
        android:id="@+id/btnSignupPageLogin"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/custom_button"
        android:onClick="buBacktoLogin"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/tvRememberpassword"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/tvRememberpassword"
        app:layout_constraintTop_toTopOf="@+id/tvRememberpassword" />


</androidx.constraintlayout.widget.ConstraintLayout>